PORT-1675 fix ingest panel and rights repo safari layout issues

--- a/src/pages/avails/ingest-panel/components/ingest/Ingest.scss
+++ b/src/pages/avails/ingest-panel/components/ingest/Ingest.scss
@@ -1,5 +1,5 @@
 .nexus-c-avail-ingest {
-  width: 350px;
+  width: 100%;
   padding: 12px;
   border-bottom: 1px solid #DCDCDC;
   background: #FFFFFF;
